resolved z-index issue of kanji overlaying navbar dropdown content

--- a/src/config/Navigation.css
+++ b/src/config/Navigation.css
@@ -6,7 +6,7 @@
   width: 100%;
   position: relative;
   transition: background-color 0.7s ease; /* Smooth transition for background color change */
-  z-index: 100;
+  z-index: 101;
 }
 
 /* Style the links inside the navigation bar */
@@ -26,7 +26,7 @@
   margin-right: 10px;
   position: relative;
   font-family: 'Abys';
-  z-index: 100;
+  z-index: 99;
 }
 
 /* Style the links inside the nav items */
@@ -38,7 +38,7 @@
   text-decoration: none;
   font-size: 30px;
   font-family: 'Abys';
-  z-index: 100;
+  z-index: 98;
 }
 
 /* Dropdown content styles */
@@ -48,20 +48,20 @@
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1001;
   list-style: none;
   padding: 0;
   margin: 0;
   top: 100%;
   left: 0;
   font-family: 'Abys';
+  z-index: 97;
 }
 
 /* Style the dropdown links */
 .subNavItem {
   float: none;
   font-family: 'Abys';
-  z-index: 100;
+  z-index: 96;
 }
 
 .subNavLink {
@@ -70,7 +70,7 @@
   text-decoration: none;
   display: block;
   text-align: left;
-  z-index: 1100;
+  z-index: 95;
   font-family: 'Abys';
 }
 
@@ -79,42 +79,42 @@
 .navItem:hover .dropbtn {
   background-color: #555;
   color: white;
-  z-index: 100;
+  z-index: 94;
 }
 
 /* Add a grey background to dropdown links on hover */
 .subNavLink:hover {
   background-color: #ddd;
   color: black;
-  z-index: 100;
+  z-index: 93;
 }
 
 /* Show the dropdown menu on hover */
 .navItem:hover .dropdownContent {
   display: block;
-  z-index: 100;
+  z-index: 92;
 }
 
 /* Media query for small screens */
 @media screen and (max-width: 600px) {
   .navList {
     display: block;
-    z-index: 100;
+    position: relative;
   }
 
   .navItem {
     display: table-cell;
-    z-index: 100;
+    position: relative;
   }
 
   .dropdownContent {
     position: relative;
-    z-index: 100;
   }
 
   .navbar {
-    background-color: #8d98a133; /* Apply the desired color when screen is small */
+    position: relative;
     z-index: 100;
+    /* background-color: #8d98a133; Apply the desired color when screen is small */
   }
 
   
@@ -124,21 +124,24 @@
 @media screen and (max-width: 480px) {
   .navList {
     display: block;
-    z-index: 1004;
+    position: relative;
+    z-index: 1000;
   }
 
   .navItem {
     display: table-cell;
-    z-index: 1003;
+    position:relative;
+    z-index: 1000;
   }
 
   .dropdownContent {
     position: relative;
-    z-index: 1002;
+    z-index: 1000;
   }
 
   .navbar {
-    background-color: #8d98a133; /* Apply the desired color when screen is small */
-    z-index: 1001;
+    position: absolute;
+    /* background-color: #8d98a133; Apply the desired color when screen is small */
+    z-index: 1070;
   }
 }
